arrows done, fix first svg

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
       <img class="logo" src="./images/logo.svg"></div>
        <!-- mobile menu-->
       <ul class="mobile-menu">
-        <li class="menu-category" data-key="product">Product<img src="./images/icon-arrow-dark.svg" alt="arrow" class="arrow-dark"><img src="./images/icon-arrow-light.svg" alt="arrow" class="arrow-light"></li>
-        <ul class="items product-items">
+        <li class="menu-category" data-key="product">Product<img src="./images/icon-arrow-dark.svg" alt="arrow" class="arrow arrow-dark product-arrow"><img src="./images/icon-arrow-light.svg" alt="arrow" class="arrow arrow-light product-arrow"></li>
+        <ul data-key="product"class="items product-items">
           <li>Overview</li>
           <li>Pricing</li>
           <li>Marketplace</li>
           <li>Features</li>
           <li>Integrations</li>
         </ul>
-        <li class="menu-category" data-key="company">Company<img src="./images/icon-arrow-dark.svg" alt="arrow" class="arrow-dark"><img src="./images/icon-arrow-light.svg" alt="arrow" class="arrow-light"></li>
-        <ul class="items company-items">
+        <li class="menu-category" data-key="company">Company<img src="./images/icon-arrow-dark.svg" alt="arrow" class="arrow arrow-dark company-arrow"><img src="./images/icon-arrow-light.svg" alt="arrow" class="arrow arrow-light company-arrow"></li>
+        <ul data-key="company" class="items company-items">
           <li>About</li>
           <li>Team</li>
           <li>Blog</li>
           <li>Careers</li>
         </ul>
-        <li class="menu-category" data-key="connect">Connect<img src="./images/icon-arrow-dark.svg" alt="arrow" class="arrow-dark"><img src="./images/icon-arrow-light.svg" alt="arrow" class="arrow-light"></li>
-        <ul class="items connect-items">
+        <li class="menu-category" data-key="connect">Connect<img src="./images/icon-arrow-dark.svg" alt="arrow" class="arrow arrow-dark connect-arrow"><img src="./images/icon-arrow-light.svg" alt="arrow" class="arrow arrow-light connect-arrow"></li>
+        <ul data-key="connect" class="items connect-items">
           <li>Contact</li>
           <li>Newsletter</li>
           <li>LinkedIn</li>
@@ -75,7 +75,6 @@
             by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
       </div>
     </div>
-
     <section class="dark-blue-bkg">
       <img class="phones dark-blue-bkg-left" src="./images/illustration-phones.svg" alt="phones illustration">
       <div class="dark-blue-bkg-right">
@@ -84,7 +83,6 @@
         This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
       </div>
     </section>
-
 
     <section class="white-bkg2">
       <img class="laptop white-bkg2-left" src="./images/illustration-laptop-mobile.svg" alt="laptop illustration">
