--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <p class="heading-caption">Grow your audience and build your online brand</p>
     
       <div class="hero-btns">
-        <button class="hero-btn">Start for Free</button>
-        <button class="hero-btn">Learn More</button>
+        <button class="start-for-free hero-btn">Start for Free</button>
+        <button class="learn-more hero-btn">Learn More</button>
       </div>
     </div>
   </section>
