h4 removed, ul's modified, alt's added, readme updated

--- a/index.html
+++ b/index.html
@@ -11,48 +11,52 @@
     <header class="hero">
       <img class="hero-svg" src="images/bg-pattern-intro-mobile.svg" alt="shapes illustration">
       <nav class="nav-flex">
-        <img class="logo" src="./images/logo.svg"></div>
+        <img class="logo" src="./images/logo.svg" alt="blogr logo"></div>
         <ul class="nav-items">
           <li class="menu-category" data-key="product">
             Product
             <img src="./images/icon-arrow-dark.svg" alt="arrow" class="arrow arrow-dark product-arrow"><img src="./images/icon-arrow-light.svg" alt="arrow" class="arrow arrow-light product-arrow">
           </li>
-          <ul data-key="product"class="items product-items">
-            <li>Overview</li>
-            <li>Pricing</li>
-            <li>Marketplace</li>
-            <li>Features</li>
-            <li>Integrations</li>
-          </ul>
-
+          <li>
+            <ul data-key="product"class="items product-items">
+              <li>Overview</li>
+              <li>Pricing</li>
+              <li>Marketplace</li>
+              <li>Features</li>
+              <li>Integrations</li>
+            </ul>
+          </li>
           <li class="menu-category" data-key="company">
             Company
             <img src="./images/icon-arrow-dark.svg" alt="arrow" class="arrow arrow-dark company-arrow"><img src="./images/icon-arrow-light.svg" alt="arrow" class="arrow arrow-light company-arrow">
           </li>
-          <ul data-key="company" class="items company-items">
-            <li>About</li>
-            <li>Team</li>
-            <li>Blog</li>
-            <li>Careers</li>
-          </ul>
+          <li>
+            <ul data-key="company" class="items company-items">
+              <li>About</li>
+              <li>Team</li>
+              <li>Blog</li>
+              <li>Careers</li>
+            </ul>
+          </li>
           <li class="menu-category" data-key="connect">
             Connect
             <img src="./images/icon-arrow-dark.svg" alt="arrow" class="arrow arrow-dark connect-arrow"><img src="./images/icon-arrow-light.svg" alt="arrow" class="arrow arrow-light connect-arrow">
           </li>
-          <ul data-key="connect" class="items connect-items">
-            <li>Contact</li>
-            <li>Newsletter</li>
-            <li>LinkedIn</li>
-          </ul>
-          <hr>
-          
-          <div class="nav-btns">
+          <li>
+            <ul data-key="connect" class="items connect-items">
+              <li>Contact</li>
+              <li>Newsletter</li>
+              <li>LinkedIn</li>
+            </ul>
+          </li>
+          <li><hr></li>
+          <li class="nav-btns">
             <button class="login">Login</button>
             <br>
             <button class="sign-up">Sign Up</button>
-          </div>
+          </li>
         </ul>
-        <img class="hamburger-menu" src="./images/icon-hamburger.svg"></img>
+        <img class="hamburger-menu" src="./images/icon-hamburger.svg" alt="hamburger menu icon"></img>
       </nav>
       <div class="hero-text">
         <h1>A modern publishing platform</h1>
@@ -69,7 +73,7 @@
       <div class="white-bkg1-flex">
         <img class="editor white-bkg1-right" src="./images/illustration-editor-mobile.svg" alt="editor illustration">
         <div class="white-bkg1-left">
-          <h2>Introducing an extensible editor</h3>
+          <h2>Introducing an extensible editor</h2>
             <p> Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
             The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
             videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
@@ -105,7 +109,7 @@
     <footer>
       <img class="logo footer-logo" src="./images/logo.svg" alt="blogr logo">
       <div class="footer-section">
-        <h4 class="footer-title">Product</h4>
+        <h3 class="footer-title">Product</h3>
         <ul class="footer-items">
           <li>Overview</li>
           <li>Pricing</li>
@@ -115,7 +119,7 @@
         </ul>
       </div>
       <div class="footer-section">
-        <h4 class="footer-title">Company</h4>
+        <h3 class="footer-title">Company</h3>
         <ul class="footer-items">
           <li>About</li>
           <li>Team</li>
@@ -125,7 +129,7 @@
       </div>
 
       <div class="footer-section">
-        <h4 class="footer-title">Connect</h4>
+        <h3 class="footer-title">Connect</h3>
         <ul class="footer-items">
           <li>Contact</li>
           <li>Newsletter</li>
